<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_sensor_plugin</name>
  <version>0.1.0</version>
  <description>Custom Gazebo Harmonic plugin simulating a noise-augmented IMU sensor using Entity Component System (ECS) API. Integrates with ros_gz_bridge to publish sensor data over ROS 2 topics with comprehensive validation tests.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Core ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Gazebo Harmonic dependencies -->
  <depend>gz-sim</depend>
  <depend>gz-common</depend>
  <depend>gz-transport</depend>
  <depend>gz-utils</depend>
  <depend>gz-msgs</depend>

  <!-- ros_gz bridge dependencies -->
  <depend>ros_gz</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>pytest</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
